--- a/game-backlog-les-10/css/style.css
+++ b/game-backlog-les-10/css/style.css
@@ -16,4 +16,59 @@ body {
   min-height: 100vh;
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body::after {
+  content: "";
+  background: radial-gradient(0.5rem 0.5rem, rgba(236, 236, 236, 0.1) 90%, transparent);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: 4vw 4vw;
+  background-repeat: repeat;
+  z-index: -1;
+}
+
+@media screen and (max-width: 50rem) {
+  body::after {
+    background-size: 20vw 20vw;
+  }
+}
+@keyframes popup {
+  from {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.card {
+  width: 40rem;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #4158D0;
+  background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+  animation-name: popup;
+  animation-duration: 0.6s;
+  animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.card__heading {
+  font-size: 120%;
+  text-transform: uppercase;
+}
+
 /*# sourceMappingURL=style.css.map */
