--- a/game-backlog-les-10/scss/base.scss
+++ b/game-backlog-les-10/scss/base.scss
@@ -1,4 +1,29 @@
+@use "./abstracts/mixins";
+
 
 body{
     min-height: 100vh;
+    @include mixins.flexCenter;
+    background: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body::after{
+    content: "";
+    background: radial-gradient(0.5rem 0.5rem, rgba(236, 236, 236,0.1) 90% ,transparent);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: 4vw 4vw;
+    background-repeat: repeat;
+    z-index: -1;
+
+}
+
+@media screen and (max-width: 50rem){
+    body::after{
+        background-size: 20vw 20vw;
+    }
 }
